fix layout bug

--- a/styles.css
+++ b/styles.css
@@ -283,20 +283,30 @@ html, body {
 .hero-dashboard :is(img) {
     position: absolute;
     top: 0;
-    left: 0;
-    width: 100%;
+    left: 50%;
+    width: 1260px;
     height: 100%;
     object-fit: cover;
     z-index: -1;
+    transform: translateX(-50%);
+}
+.hero-dashboard {
+    flex-direction: column;
+    gap: 1.25rem;
+    height: auto;
+    margin-bottom: 0.3125rem;
 }
 
 .hero-dashboard__primary {
     flex: 1 1 auto;
+    margin-left: -0.9375rem;
     padding: 1.25rem 0 1.25rem 1.25rem;
 }
 
 @media (max-width: 768px) {
     .hero-dashboard__primary {
+        margin-left: 0;
+        margin-top: -1.25rem;
         padding: 1.25rem 1.25rem 0 1.25rem;
     }
 }
